--- a/Spring_Backend/proj/pom.xml
+++ b/Spring_Backend/proj/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>jakarta.persistence</groupId>
+    		<artifactId>jakarta.persistence-api</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
